syntax = "proto3";

package ZeiJakuSei.Packets;

message GetConnectionInfoReq {
    int64 RequestTime = 1;
    string RsaPrivateKey = 2;
}