syntax = "proto3";

package ZeiJakuSei.Packets;

message PingReq {
    int64 RequestTime = 1;
    string RsaPrivateKey = 2;
}